--- a/IClothingApplication/Views/Home/AdminDashboard.cshtml
+++ b/IClothingApplication/Views/Home/AdminDashboard.cshtml
@@ -12,32 +12,7 @@
     </div>
 
     <div class="col-md-4">
-        <h2>@Html.ActionLink("Administrators", "Index", "Administrators")</h2>
-        <p>Administrators Basic Information.</p>
-    </div>
-
-    <div class="col-md-4">
-        <h2>@Html.ActionLink("Brands", "Index", "Brands")</h2>
-        <p>Brands Basic Information.</p>
-    </div>
-
-    <div class="col-md-4">
-        <h2>@Html.ActionLink("Categories", "Index", "Categories")</h2>
-        <p>Categories Basic Information.</p>
-    </div>
-
-    <div class="col-md-4">
-        <h2>@Html.ActionLink("Departments", "Index", "Departments")</h2>
-        <p>Departments Basic Information.</p>
-    </div>
-
-    <div class="col-md-4">
-        <h2>@Html.ActionLink("Emails", "Index", "Emails")</h2>
-        <p>Emails Basic Information.</p>
-    </div>
-
-    <div class="col-md-4">
-        <h2>@Html.ActionLink("AboutUs", "Index", "AboutUs")</h2>
-        <p>Emails Basic Information.</p>
+        <h2>@Html.ActionLink("Manage Database", "AdminManagementDashboard", "Home")</h2>
+        <p>Links to Manage the Database Tables</p>
     </div>
 </div>
