Basic Add to Cart & View Cart

--- a/IClothingApplication/Views/Products/Index.cshtml
+++ b/IClothingApplication/Views/Products/Index.cshtml
@@ -53,9 +53,10 @@
             @Html.DisplayFor(modelItem => item.Category.categoryName)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.productID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.productID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.productID })
+            @Html.ActionLink("Edit", "Edit", new { id = item.productID }) |
+            @Html.ActionLink("Details", "Details", new { id = item.productID }) |
+            @Html.ActionLink("Delete", "Delete", new { id = item.productID }) |
+            @Html.ActionLink("Add To Cart", "Add", new { id = item.productID })
         </td>
     </tr>
 }
