--- a/IClothingApplication/Views/Products/Index.cshtml
+++ b/IClothingApplication/Views/Products/Index.cshtml
@@ -44,7 +44,7 @@
             @Html.ActionLink("Category", "Index", new { sortOrder = ViewBag.CategorySortParm, filter = ViewBag.filter, searchString = ViewBag.searchString, changeSort = true })
         </th>
         <th>
-            @Html.ActionLink("Only Versace", "Index", new { sortOrder = ViewBag.CategorySortParm, filter = "Versace", filterType = "Brand", searchString = ViewBag.searchString, changeSort = true })
+            @Html.ActionLink("Mens", "Index", new { sortOrder = ViewBag.CategorySortParm, filter = "Mens", filterType = "Department", searchString = ViewBag.searchString, changeSort = false })
         </th>
     </tr>
 
