--- a/IClothingApplication/Views/Home/About.cshtml
+++ b/IClothingApplication/Views/Home/About.cshtml
@@ -7,6 +7,7 @@
 @{var item = Model.ElementAt(0); }
 
 <main aria-labelledby="title">
+    <div style="font-family:'Baskerville Old Face';"
     <h1>iClothing</h1>
     <h2 id="title">@ViewBag.Title</h2>
 
