--- a/IClothingApplication/Views/Home/AdminDashboard.cshtml
+++ b/IClothingApplication/Views/Home/AdminDashboard.cshtml
@@ -17,27 +17,28 @@
     </div>
 
     <div class="col-md-4">
-        <h2>@Html.ActionLink("Brands", "Index", "Brands")</h2>
+        <h2>@Html.ActionLink("Manage Brands", "Index", "Brands")</h2>
         <p>Brands Basic Information.</p>
     </div>
 
     <div class="col-md-4">
-        <h2>@Html.ActionLink("Categories", "Index", "Categories")</h2>
+        <h2>@Html.ActionLink("Manage Categories", "Index", "Categories")</h2>
         <p>Categories Basic Information.</p>
     </div>
 
     <div class="col-md-4">
-        <h2>@Html.ActionLink("Departments", "Index", "Departments")</h2>
+        <h2>@Html.ActionLink("Manage Departments", "Index", "Departments")</h2>
         <p>Departments Basic Information.</p>
     </div>
 
     <div class="col-md-4">
+        <img src="~/Images/mail.jpg" width="120" height="120" alt="Mail Photo" />
         <h2>@Html.ActionLink("Emails", "Index", "Emails")</h2>
         <p>Emails Basic Information.</p>
     </div>
 
     <div class="col-md-4">
-        <h2>@Html.ActionLink("AboutUs", "Index", "AboutUs")</h2>
+        <h2>@Html.ActionLink("Manage AboutUs", "Index", "AboutUs")</h2>
         <p>Emails Basic Information.</p>
     </div>
 </div>
