--- a/IClothingApplication/Views/UserComments/Create.cshtml
+++ b/IClothingApplication/Views/UserComments/Create.cshtml
@@ -12,29 +12,29 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>UserComments</h4>
+        <h4>Customer Comments</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
+        <div class="form-group" hidden>
             @Html.LabelFor(model => model.commentDate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.commentDate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.commentDate, new { htmlAttributes = new { @class = "form-control", @Value = DateTime.Now.Date } })
                 @Html.ValidationMessageFor(model => model.commentDate, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.commentDescription, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.commentDescription, "Comment:",  htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.commentDescription, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.commentDescription, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group" hidden>
             @Html.LabelFor(model => model.customerID, "customerID", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("customerID", null, htmlAttributes: new { @class = "form-control" })
+                @Html.TextBoxFor(model => model.customerID, new { @readonly = "readonly", @class = "form-control", @Value = @Session["UserID"] })
                 @Html.ValidationMessageFor(model => model.customerID, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -48,7 +48,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to Home", "Index", "Home")
 </div>
 
 @section Scripts {
