--- a/IClothingApplication/Views/UserQueries/Create.cshtml
+++ b/IClothingApplication/Views/UserQueries/Create.cshtml
@@ -7,24 +7,24 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
-        <h4>UserQuery</h4>
+        <h4>Customer Review</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
+        <div class="form-group" hidden>
             @Html.LabelFor(model => model.queryDate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.queryDate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.queryDate, new { htmlAttributes = new { @class = "form-control", @Value = DateTime.Now.Date } })
                 @Html.ValidationMessageFor(model => model.queryDate, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.queryDescription, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.queryDescription, "Query:", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.queryDescription, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.queryDescription, "", new { @class = "text-danger" })
@@ -47,8 +47,9 @@
     </div>
 }
 
+<!-- changed to have it go back to the CustomerDashboard -->
 <div>
-    @Html.ActionLink("Back to Dashboard", "Customer Dashboard", "Home")
+    @Html.ActionLink("Back to Customer Page", "CustomerDashboard", "Home")
 </div>
 
 @section Scripts {
