--- a/IClothingApplication/Views/Products/Index.cshtml
+++ b/IClothingApplication/Views/Products/Index.cshtml
@@ -4,23 +4,30 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Products</h2>
 
-<p>
+@*<p>
     @Html.ActionLink("Create New", "Create")
-</p>
+</p>*@
 
-<p>
+@*<p>
     @ViewBag.filter
     @ViewBag.searchString
-</p>
+</p>*@
+
+@if (ViewBag.filter != null)
+{
+<h4>
+Filtering by @ViewBag.filterType: @ViewBag.filter  
+</h4>
+}
 
 @using (Html.BeginForm())
 {
-    <p>
-        Find by name: @Html.TextBox("SearchString")
-        <input type="submit" value="Search" />
-    </p>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        Find by name: @Html.TextBox("SearchString", "", new { @class = "form-control mr-sm-2", @placeholder = "Search Items"})
+        <input type="submit" value="Search" class="btn btn-outline-success my-2 my-sm-0" />
+    </nav>
 }
 
 <table class="table">
