--- a/IClothingApplication/Views/Home/Index.cshtml
+++ b/IClothingApplication/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
     <div class="row">
         <div class="col-md-4">
             <h2>@Html.ActionLink("Shop Women's", "FilteredDepartments", "Department", new { departmentId = 1 }, null)</h2>
-            <img src="~/Images/women1.jpg" width="250" height="400" border="2px" alt="Woman Photo" />
+            <img src="~/Images/women1.jpg" width="250" height="400" border="2px" style="object-fit: cover" alt="Woman Photo" />
         </div>
         <div class="col-md-4">
             <h2>@Html.ActionLink("Shop Men's", "Index", "Departments")</h2>
